2차 테스트 완료 및 코드 수정

--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -180,10 +180,10 @@
             <!-- 바로구매, 장바구니 버튼 -->
             <div class="btn_zone">
               <div class="btn_item">
-                <button id="btn_buy_now" class="button is-medium is-rounded">바로 구매</button>
+                <button id="btn_buy_now" class="button is-medium">바로 구매</button>
               </div>
               <div class="btn_item">
-                <button id="btn_add_to_cart" class="button is-medium is-rounded">장바구니 담기</button>
+                <button id="btn_add_to_cart" class="button is-medium">장바구니 담기</button>
               </div>
             </div>
 
