--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -98,7 +98,7 @@
                     id="product_img"
                     type="file"
                     name="image-file"
-                    accept=".png, .jpeg, .jpg"
+                    accept=".png, .jpeg, .jpg, .bmp, .gif, .base64"
                   />
                   <span class="file-cta">
                     <span class="file-icon">
