--- a/src/views/admin-category-manage/admin-category-manage.html
+++ b/src/views/admin-category-manage/admin-category-manage.html
@@ -22,6 +22,9 @@
         src="https://kit.fontawesome.com/7630448495.js"
         crossorigin="anonymous"
         ></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
         <!-- 커스텀 css, js -->
         <link rel="stylesheet" href="admin-category-manage.css" />
   </head>
