--- a/src/views/product-detail/product-detail.css
+++ b/src/views/product-detail/product-detail.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Nanum Gothic', sans-serif;
+}
+
 /* header */
 /* 
 .navbar .container .navbar-brand .navbar-item .has-text-link {
