--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -31,6 +31,7 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="home.css" />
     <!-- <script src="home.js" type="module" defer></script> -->
+    <script src="home-nav.js" type = "module" defer></script>
     
   </head>
   <body>
