--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-n팀</title>
+    <title>FOODDOCK</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
@@ -28,18 +28,35 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="home.css" />
+    <!-- 폰트 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <!-- <script src="home.js" type="module" defer></script> -->
-    
+    <style>
+      .logo {
+        width:70px; 
+        height:70px; 
+        border-radius: 25%; 
+        background-image: url('../logo.png'); 
+        background-size: cover; 
+        box-shadow: 0px 0px 5px #333;
+        transition: all 0.3s ease-in-out;
+      }
+      .logo:hover {
+        transform: scale(1.1);
+      }
+    </style>
   </head>
   <body>
-    <!-- 헤더 -->
+    <!-- 헤더 시작 -->
     <div id="header">
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="container mt-3">
           <div class="navbar-brand">
             <a class="navbar-item" href="/">
-              <img src="/elice-rabbit.png" width="30" height="30" />
-              <span class="has-text-link">쇼핑-9팀</span>
+              <div class="logo">
+              </div>
             </a>
             <a
               role="button"
@@ -55,15 +72,14 @@
           </div>
             <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
               <ul id="navbar">
-                <!-- <li><a href="/product-meat">제품</a></li> -->
-                <li><a href="/login">로그인</a></li>
-                <li><a href="/register">회원가입</a></li>
+                <li><a href="/login" style="font-weight:500;">로그인</a></li>
+                <li><a href="/register" style="font-weight:500;">회원가입</a></li>
                 <li>
                   <a href="/cart" aria-current="page">
                     <span class="icon">
                       <i class="fas fa-cart-shopping"></i>
                     </span>
-                    <span>카트</span>
+                    <span style="font-weight:500;">카트</span>
                   </a>
                 </li>
               </ul>
@@ -133,14 +149,7 @@
       </div>
     </div>
       <!-- 배너 슬라이드 끝 -->
-    
-      <!-- <div class="landing" id="landingDiv">
-        <h1>랜딩 페이지</h1>
-      </div>
-      <div class="greeting" id="greetingDiv">
-        <h1>안녕하세요!</h1>
-      </div> -->
-    <!-- </div> -->
+  
     <section>
       <div class="promotion">
         <div id="section_title">
@@ -240,7 +249,7 @@
 
         <div id="call_wrap">
           <div class="call_title_wrap">
-            <h3 class="call">1234-5678</h3>
+            <h3 class="call">1779-5549</h3>
           </div>
           <div id="right_call_wrap">
             <p class="customer">365고객센터</p>
@@ -260,18 +269,19 @@
       </div>
 
       <div id="introduce_wrap" >
-        <ul class="introduce_list">
+        <!-- <ul class="introduce_list">
           <li>컬리소개</li>
           <li>컬리소개영상</li>
           <li>인재채용</li>
           <li>이용약관</li>
-        </ul>
-        <p class="footer_p">법인명 ( 상호 ) : 주식회사 xx <span>I</span> 사업자등록번호 : 111-11-11111 <span class="font_change">사업자정보 확인</span></p>
-        <p class="footer_p">통신판매업 : 제 1111-서울강남-11111호 <span>I</span> 개인정보보호책임자 : xxx</p>
-        <p class="footer_p">주소 : 서울특별시 xx구 xx란로 111,11층(xx동) <span>I</span> 대표이사 : xxx</p>
-        <p class="footer_p">입점문의 : <span class="font_change">입점문의하기</span> <span>I</span> 마케팅제휴 : <span class="font_change">xxxxxxxx3714@xxxxxx.com</span></p>
+        </ul> -->
+        <p class="footer_p">COMPANY : (주)푸드장 / OWNER : 박승준, 김호진, 이아영, 김용민, 조성호 / CALL CENTER : 1779-5549 <span>I</span></p>
+        <p class="footer_p">ADDRESS : 서울 강남구 테헤란로53길 16 예안빌딩 B1층 <span>I</span></p>
+        <p class="footer_p">입점문의: tmdeksdl@gmail.com <span>I</span> 채용문의: cohojin3714@gmail.com
+        <p class="footer_p">개인정보관리책임자: bdd3452@gmail.com <span>I</span>
+        <!-- <p class="footer_p">입점문의 : <span class="font_change">입점문의하기</span> <span>I</span> 마케팅제휴 : <span class="font_change">xxxxxxxx3714@xxxxxx.com</span></p>
         <p class="footer_p">채용문의 : <span class="font_change">recruit@xxxxx.xxx</span>
-        <p class="footer_p">대량주문 문의 : <span class="font_change">xxxxxxx@xxxxxx.com</span></p>
+        <p class="footer_p">대량주문 문의 : <span class="font_change">xxxxxxx@xxxxxx.com</span></p> -->
   
       </div>
     </footer>
