헤더 푸터 추가 전 커밋

--- a/src/views/mypage/mypage.css
+++ b/src/views/mypage/mypage.css
@@ -220,8 +220,18 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
   
-  /* 마이페이지 css */
+  /* mypage css */
 section.container {
     width: 1050px;
     margin: 0 auto;
