--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -42,7 +42,14 @@
         </div>
     </nav>
 
-    <!-- 제품 추가 폼(Form) -->
+
+
+
+
+
+
+
+    <!-- product-add -->
     <section class="container">
       <div class="inner_container">
         <div class="block account-header">
@@ -157,7 +164,7 @@
         </div>
       </div>
     </section>
-
     <script src="product-add.js" type="module"></script>
+    
   </body>
 </html>
