--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -116,6 +116,8 @@
 
 
 
+
+<!-- product-detail -->
     <section class="container">
 
       <!-- 상단 제품 정보 틀 -->
@@ -200,6 +202,8 @@
 
 
 
+
+    
 
 
 
