--- a/src/views/product-edit/product-edit.html
+++ b/src/views/product-edit/product-edit.html
@@ -42,7 +42,16 @@
         </div>
     </nav>
 
-    <!-- 제품 추가 폼(Form) -->
+
+
+
+
+
+
+
+
+
+    <!-- product-edit -->
     <section class="container">
       <div class="inner_container">
         <div class="block account-header">
@@ -92,7 +101,7 @@
               </div>
             </div>
 
-            <!-- 제품 사진 (DB 용량 문제로 수정 불가)-->
+            <!-- 제품 사진 -->
             <div class="field">
               <label class="label" for="product_img">제품 사진</label>
               <div class="control">
@@ -148,7 +157,14 @@
         </div>
       </div>
     </section>
-
     <script src="product-edit.js" type="module"></script>
+
+
+
+
+
+    
+
+
   </body>
 </html>
