6/1 헤더/푸터 수정을 위한 merge 전 임시 저장

--- a/src/views/fish/fish.html
+++ b/src/views/fish/fish.html
@@ -80,16 +80,16 @@
                 </a>
               </li>
               <li class="menu menu2">
-                <span id="meat">고기</span>
+                <a class="meat">고기</a>
               </li>
               <li class="menu menu3">
-                <span id="vegetable">채소</span>
+                <a class="vegetable">채소</a>
               </li>
               <li class="menu menu4">
-                <span id="fruit">과일</span>
+                <a class="fruit">과일</a>
               </li>
               <li class="menu menu5">
-                <span id="fish">생선</span>
+                <a class="fish">생선</a>
               </li>
             </ul>
           </div>
