--- a/src/views/meat/meat.html
+++ b/src/views/meat/meat.html
@@ -79,16 +79,16 @@
                 </a>
               </li>
               <li class="menu menu2">
-                <a id="meat">고기</a>
+                <a class="meat">고기</a>
               </li>
               <li class="menu menu3">
-                <a id="vegetable">채소</a>
+                <a class="vegetable">채소</a>
               </li>
               <li class="menu menu4">
-                <a id="fruit">과일</a>
+                <a class="fruit">과일</a>
               </li>
               <li class="menu menu5">
-                <a id="fish">생선</a>
+                <a class="fish">생선</a>
               </li>
             </ul>
           </div>
