--- a/src/views/pay/pay.html
+++ b/src/views/pay/pay.html
@@ -30,7 +30,7 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="pay.css" />
-    
+    <script src="daum-api.js" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
@@ -111,7 +111,7 @@
           <div class="address-control">
             <div class="address-btn-wrap">
               <input class="input" type="text" id="postcode" placeholder="우편번호">
-              <input class="input" type="button" onclick="daumPostCode()" value="우편번호 찾기"><br>
+              <input class="input" type="button" onclick="daumPostCode()" value="우편번호 찾기">
             </div>
             <input class="input" type="text" id="address" placeholder="주소"><br>
             <div class="address-detail-wrap">
@@ -131,4 +131,5 @@
     </div>
   </body>
   <script src="pay.js" type="module"></script>
+  
 </html>
