--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -31,7 +31,7 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="register.css" />
     <script src="register.js" type="module" defer></script>
-    <script src="daum-api.js"></script>
+    <script src="daum-api.js" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
@@ -153,7 +153,7 @@
           <div class="address-control">
             <div class="address-btn-wrap">
               <input class="input" type="text" id="postcode" placeholder="우편번호">
-              <input class="input" type="button" onclick="daumPostCode()" value="우편번호 찾기"><br>
+              <input class="input" type="button" onclick="daumPostCode()" value="우편번호 찾기">
             </div>
             <input class="input" type="text" id="address" placeholder="주소"><br>
             <div class="address-detail-wrap">
