--- a/src/views/admin-category-manage/admin-category-manage.css
+++ b/src/views/admin-category-manage/admin-category-manage.css
@@ -317,6 +317,8 @@ div.add_zone #btn_submit {
     border-top-right-radius: 30px; 
     border-bottom-left-radius: 30px; 
     border-bottom-right-radius: 30px;
+
+    transition: all 0.3s;
 }
 
 div.add_zone #btn_submit:hover {
@@ -382,11 +384,14 @@ div.category_container div#category_blank2 {
     border-top-right-radius: 30px; 
     border-bottom-left-radius: 30px; 
     border-bottom-right-radius: 30px;
+
+    transition: all 0.3s;
 }
   
 .btn_edit:hover {
     background-color: rgb(250, 203, 116);  
-    border: 2px solid rgb(248, 210, 141);  
+    border: 2px solid rgb(248, 210, 141); 
+    padding: 4px 7px; 
     cursor: pointer;
 }
   
@@ -403,10 +408,13 @@ div.category_container div#category_blank2 {
     border-top-right-radius: 30px; 
     border-bottom-left-radius: 30px; 
     border-bottom-right-radius: 30px;
+
+    transition: all 0.3s;
 }
 
 .btn_del:hover {
     background-color: rgb(247, 139, 139);
     border: 2px solid rgb(247, 139, 139);
+    padding: 4px 7px; 
     cursor: pointer;
 }
