--- a/src/views/admin-product-list/admin-product-list.html
+++ b/src/views/admin-product-list/admin-product-list.html
@@ -27,6 +27,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
         <!-- 커스텀 css, js -->
         <link rel="stylesheet" href="admin-product-list.css" />
+        <!-- sweetalert2 사용하기 위한 파일 -->
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
       <!-- 헤더 -->
