--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -29,6 +29,8 @@
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.410.0.min.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="product-add.css" />
+    <!-- sweetalert2 사용하기 위한 파일 -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <!-- 헤더 -->
