제품 추가,수정 - 이미지 선택시 파일명 보이게 수정

--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -111,6 +111,7 @@
                     type="file"
                     name="image-file"
                     accept="image/*"
+                    value=""
                   />
                   <span class="file-cta">
                     <span class="file-icon">
