fix : 상품 상세 구매버튼 활성화

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -30,6 +30,9 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="cart.css" />
+    <script src="cartInit.js" defer></script>
+    <script src="cart.js" defer></script>
+    <script src="cart-test.js" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
@@ -121,7 +124,4 @@
       </form>
     </div>
   </body>
-  <script src="cartInit.js"></script>
-  <script src="cart.js"></script>
-  <script src="cart-test.js"></script>
 </html>
