--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,15 +1,11 @@
 * {
   margin:0;
   padding:0;
-  font-family: 'Nanum Gothic', sans-serif;  
+  font-family: 'Nanum Gothic', sans-serif; 
 }
 #header, .navbar, body {
   margin: 0 auto;
   color: #333;
-  /* padding: 0 50px; */
-}
-#header {
-  
 }
 ul, li {
   list-style:none;
@@ -21,6 +17,7 @@ ul, li {
 }
 #navbar li a {
   transition: all 0.3s ease-in-out;
+  font-weight: 700;
 }
 #navbar li a:hover {
   transform: scale(1.05);
@@ -49,7 +46,6 @@ ul, li {
   justify-content: center;
 }
 #inner_nav li {
-  /* display: inline; */
   font-size: 12pt;
   font-weight: 400;
   padding: 0 4px 0 10px;
@@ -98,10 +94,6 @@ ul, li {
 .menu_list .category_wrap li:hover {
   background: #eee;
 }
-.menu_list .category_wrap li span{
-  /* text-align: center; */
-  /* vertical-align: center; */
-}
 .menu_list .category_wrap li span:hover{
   color: #68a790;
 }
@@ -112,31 +104,6 @@ ul, li {
   color: #68a790;
   font-weight: 700;
 }
-/* 제품 검색창 시작 / 현재 불필요 */
-.search {
-  display:flex;
-  position: relative;
-}
-.search_box {
-  width: 200px;
-  height: 36px;
-  border: 1px solid #f7f7f7;
-  border-radius: 18px;
-  background-color: #f7f7f7;
-  padding: 0 60px 0 14px;
-  font-size: 12px;
-  color: #555;
-  margin: auto;
-}
-#search_btn {
-  width: 35px;
-  height: 35px;
-  margin: auto;
-  position: absolute;
-  right: 5px;
-  top: 25px;
-} 
-/* 제품 검색창 끝/ 현재 불필요 */
 .navbar-end a {
   color: #333;
 }
@@ -283,97 +250,6 @@ section {
 } */
 
 
-.footer {
-  margin: 0 15vw 0 15vw;
-  padding:0;
-  align-items: flex-start;
-}
-#custom_center_wrap {
-  text-align: center;
-
-  margin: 0 0 10px 0;
-}
-.center_h2 {
-  font-size: 16pt;
-  font-weight:700;
-  padding-bottom: 29px;
-}
-
-#call_wrap,
-#question_wrap {
-  display: flex;
-  margin: 10px 16px 0 0;
-}
-
-#call_wrap .call_title_wrap,
-#question_wrap .question_title_wrap
-{
-  text-align: center;
-  line-height: 40px;
-  height: 40px;
-  width: 140px;
-  border: 1px solid #e3e3e3;
-  border-radius: 3px;
-
-}
-#call_wrap .call_title_wrap{
-  border: none;
-  
-}
-#call_wrap .call_title_wrap .call {
-  /* font-size:1.7rem; */
-  font-size: 27px;
-  font-weight: 700;
-  white-space: nowrap;
-}
-#question_wrap .question_title_wrap .cc_qna{
-  font-size:14px;
-  font-weight: 700;
-  white-space: nowrap;
-}
-
-#right_call_wrap,
-#right_question_wrap{
-  padding-left: 10px;
-  white-space: nowrap;
-}
-#right_call_wrap .detail,
-#right_question_wrap .detail{
-  color: #999;
-}
-
-#introduce_wrap {
-  /* display: flex; */
-}
-
-.introduce_list {
-  display: flex;
-  justify-content: space-around;
-  padding-bottom: 29px;
-}
-.footer {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  font-weight: 500;
-  font-size: 14px;
-  padding: 50px;
-  width: 100%;
-  margin: 0;
-  
-  /* margin: 100px; */
-  
-}
-
-/* 고객 행복센터 및 멤버소개 */
-.footer_p {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  color: #999999;
-  font-size: 12px;
-  padding-bottom: 6px;
-  white-space: nowrap;
-}
 
 .gallery_wrap {
   /* width: 100%;
@@ -430,9 +306,7 @@ section {
   height: 320px;
   overflow: hidden;
   border-bottom: solid 3px #333;
-  /* border: solid 3px #333;
-  border-radius: 5%;
-  box-shadow: 5px 5px 5px gray; */
+
 }
 .item.thumbnail a img {
   content: url('https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg');
@@ -492,4 +366,82 @@ section {
   transform: scale(1.05);
 }
 
+/* footer 시작 */
+.footer_p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  color: #999999;
+  font-size: 12px;
+  padding-bottom: 6px;
+  white-space: nowrap;
+}
+.footer {
+  margin: 0 15vw 0 15vw;
+  padding:0;
+  align-items: flex-start;
+}
+#custom_center_wrap {
+  text-align: center;
 
+  margin: 0 0 10px 0;
+}
+.center_h2 {
+  font-size: 16pt;
+  font-weight:700;
+  padding-bottom: 29px;
+}
+#call_wrap,
+#question_wrap {
+  display: flex;
+  margin: 10px 16px 0 0;
+}
+#call_wrap .call_title_wrap,
+#question_wrap .question_title_wrap
+{
+  text-align: center;
+  line-height: 40px;
+  height: 40px;
+  width: 140px;
+  border: 1px solid #e3e3e3;
+  border-radius: 3px;
+}
+#call_wrap .call_title_wrap{
+  border: none;
+  
+}
+#call_wrap .call_title_wrap .call {
+  /* font-size:1.7rem; */
+  font-size: 27px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+#question_wrap .question_title_wrap .cc_qna{
+  font-size:14px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+#right_call_wrap,
+#right_question_wrap{
+  padding-left: 10px;
+  white-space: nowrap;
+}
+#right_call_wrap .detail,
+#right_question_wrap .detail{
+  color: #999;
+}
+.introduce_list {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 29px;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 50px;
+  width: 100%;
+  margin: 0; 
+}
+/* footer 끝 */
