--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -4,19 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FOODDOCK</title>
-    <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
-    />
     <!-- bulma css -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
-    
     
     
     <!-- 폰트 어썸: 아이콘 -->
@@ -26,13 +18,13 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <!-- 커스텀 css, js -->
+    <!-- css -->
     <link rel="stylesheet" href="home.css" />
     <!-- 폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
-    <!-- <script src="home.js" type="module" defer></script> -->
+    <!-- 로고 -->
     <style>
       .logo {
         width:70px; 
@@ -76,18 +68,6 @@
           </div>
             <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
               <ul id="navbar">
-                <!-- <li><a class ="nav_login" href="/login">로그인</a></li>
-                <li><a class ="nav_logout" href="/login">로그아웃</a></li>
-                <li><a class ="nav_admin" href="/login">관리자 설정</a></li>
-                <li><a class ="nav_register" href="/register">회원가입</a></li>
-                <li>
-                  <a class = "nav_cart" href="/cart" aria-current="page">
-                    <span class="icon">
-                      <i class="fas fa-cart-shopping"></i>
-                    </span>
-                    <span style="font-weight:500;">카트</span>
-                  </a>
-                </li> -->
               </ul>
             </div>
           </div>
@@ -104,7 +84,7 @@
                 </div>
               <div class="category_wrap">
                 <ul id="inner_nav">
-                  <li onmouseover=""><a class="meat"><span>고기</span></a></li>
+                  <li><a class="meat"><span>고기</span></a></li>
                   <li><a class="vegetable"><span>야채</span></a></li>
                   <li><a class="fruit"><span>과일</span></a></li>
                   <li><a class="fish"><span>생선</span></a></li>
@@ -272,10 +252,11 @@
       <div id="introduce_wrap" >
         <p class="footer_p">COMPANY : (주)푸드장 / OWNER : 박승준, 김호진, 이아영, 김용민, 조성호 / CALL CENTER : 1779-5549 <span>I</span></p>
         <p class="footer_p">ADDRESS : 서울 강남구 테헤란로53길 16 예안빌딩 B1층 <span>I</span></p>
-        <p class="footer_p">입점문의: tmdeksdl@gmail.com <span>I</span> 채용문의: cohojin3714@gmail.com
-        <p class="footer_p">개인정보관리책임자: bdd3452@gmail.com <span>I</span>
+        <p class="footer_p">입점문의: tmdeksdl@gmail.com <span>I</span> 채용문의: cohojin3714@gmail.com <span>I</span> aylee5117@gmail.com
+        <p class="footer_p">개인정보관리책임자: bdd3452@gmail.com <span>I</span> whtjdgh104@gmail.com 
       </div>
     </footer>
+
     <script src="home.js" type="module"></script>
     <script src="banner_slider.js"></script>
 
