--- a/src/views/pay/pay.html
+++ b/src/views/pay/pay.html
@@ -30,6 +30,8 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="pay.css" />
+    <script src="../../home/home-nav.js" type = "module" defer></script>
+    <script src="../../home/home.js" type = "module" defer></script>
     
   </head>
   <body>
