--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -3,14 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-데모</title>
-    <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
-    />
+    <title>FOODDOCK</title>
     <!-- bulma css 관련 -->
     <link
       rel="stylesheet"
@@ -32,47 +25,90 @@
     <link rel="stylesheet" href="register.css" />
     <script src="register.js" type="module" defer></script>
     <script src="daum-api.js"></script>
+    <script src="../../home/home-nav.js" type = "module" defer></script>
+    <script src="../../home/home.js" type = "module" defer></script>
+     <!-- 로고 -->
+     <style>
+      .logo {
+        width:70px; 
+        height:70px; 
+        border-radius: 25%; 
+        background-image: url('../logo.png'); 
+        background-size: cover; 
+        box-shadow: 0px 0px 5px #333;
+        transition: all 0.3s ease-in-out;
+        top: 25px;
+        vertical-align: top;
+        justify-content: center;
+      }
+      .logo:hover {
+        transform: scale(1.1);
+      }
+    </style>
   </head>
   <body>
-    <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-데모</span>
-          </a>
-
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li><a href="/login">로그인</a></li>
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
-            </ul>
+    <!-- 헤더 시작 -->
+    <div id="header">
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="container mt-3">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="/">
+              <div class="logo">
+              </div>
+            </a>
+            <a
+              role="button"
+              class="navbar-burger"
+              aria-label="menu"
+              aria-expanded="false"
+              data-target="navbarBasicExample"
+            >
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+            <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
+              <ul id="navbar">
+              </ul>
+            </div>
           </div>
         </div>
+      </nav>
+      <div id="navbar_menu" class="sticky">
+        <div class="menu_main">
+          
+          <ul class="menu_list">
+            <li class="menu category_toggle">
+                <div class="toggle">
+                  <img width="16px" height="14px" src="https://res.kurly.com/pc/service/common/1908/ico_gnb_all_off_x2.png" alt="">
+                  <span>전체 카테고리</span>
+                </div>
+              <div class="category_wrap">
+                <ul id="inner_nav">
+                  <li><a class="meat"><span>고기</span></a></li>
+                  <li><a class="vegetable"><span>야채</span></a></li>
+                  <li><a class="fruit"><span>과일</span></a></li>
+                  <li><a class="fish"><span>생선</span></a></li>
+                </ul>
+              </div>
+            </li>
+            <li class="menu menu2">
+              <a href="/product/meat" class="meat">고기</a>
+            </li>
+            <li class="menu menu3">
+              <a href="/product/vegetable" class="vegetable">채소</a>
+            </li>
+            <li class="menu menu4">
+              <a href="/product/fruit" class="fruit">과일</a>
+            </li>
+            <li class="menu menu5">
+              <a href="/product/fish" class="fish">생선</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </nav>
+    </div>
     
     <!-- 회원가입 폼(Form) -->
     <div class="register-user-form-container">
@@ -167,5 +203,38 @@
         </button>
       </form>
     </div>
+
+    <!-- footer  -->
+    <footer class="footer">
+      <div id="customer_center_wrap">
+        <h2 class="center_h2">고객행복센터</h2>
+
+        <div id="call_wrap">
+          <div class="call_title_wrap">
+            <h3 class="call">1779-5549</h3>
+          </div>
+          <div id="right_call_wrap">
+            <p class="customer">365고객센터</p>
+            <p class="detail">오전 7시 - 오후 7시</p>
+          </div>
+        </div>
+        <div id="question_wrap">
+          <div class="question_title_wrap">
+            <h3 class="cc_qna">1:1 문의</h3>
+          </div>
+          <div id="right_question_wrap">
+            <p class="customer">24시간 접수 가능</p>
+            <p class="detail">고객센터 운영시간에 순차적으로 답변해드리겠습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="introduce_wrap" >
+        <p class="footer_p">COMPANY : (주)푸드장 / OWNER : 박승준, 김호진, 이아영, 김용민, 조성호 / CALL CENTER : 1779-5549 <span>I</span></p>
+        <p class="footer_p">ADDRESS : 서울 강남구 테헤란로53길 16 예안빌딩 B1층 <span>I</span></p>
+        <p class="footer_p">입점문의: tmdeksdl@gmail.com <span>I</span> 채용문의: cohojin3714@gmail.com <span>I</span> aylee5117@gmail.com
+        <p class="footer_p">개인정보관리책임자: bdd3452@gmail.com <span>I</span> whtjdgh104@gmail.com 
+      </div>
+    </footer>
   </body>
 </html>
