--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-9팀</title>
+    <title>FOODDOCK</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
@@ -27,16 +27,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="product-detail.css" />
+    <script src="/home/home.js" type = "module" defer></script>
+    <script src="/home/home-nav.js" type = "module" defer></script>
+    <!-- 로고 -->
+    <style>
+      .logo {
+        width:70px; 
+        height:70px; 
+        border-radius: 25%; 
+        background-image: url('/logo.png'); 
+        background-size: cover; 
+        box-shadow: 0px 0px 5px #333;
+        transition: all 0.3s ease-in-out;
+        top: 25px;
+        vertical-align: top;
+        justify-content: center;
+      }
+      .logo:hover {
+        transform: scale(1.1);
+      }
+    </style>
   </head>
   <body>
-    <!-- 헤더 -->
+    <!-- 헤더 시작 -->
     <div id="header">
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="container mt-3">
           <div class="navbar-brand">
             <a class="navbar-item" href="/">
-              <img src="../elice-rabbit.png" width="30" height="30" />
-              <span class="has-text-link">쇼핑-9팀</span>
+              <div class="logo">
+              </div>
             </a>
             <a
               role="button"
@@ -52,61 +72,44 @@
           </div>
             <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
               <ul id="navbar">
-                <li><a href="/login">로그인</a></li>
-                <li><a href="/register">회원가입</a></li>
-                <li>
-                  <a href="#cart" aria-current="page">
-                    <span class="icon">
-                      <i class="fas fa-cart-shopping"></i>
-                    </span>
-                    <span>카트</span>
-                  </a>
-                </li>
               </ul>
             </div>
           </div>
         </div>
       </nav>
-      <div id="navbar_menu">
+      <div id="navbar_menu" class="sticky">
         <div class="menu_main">
+          
           <ul class="menu_list">
-            <li class="menu menu1">
-              <a href="#">
-                <img width="16px" height="14px" src="https://res.kurly.com/pc/service/common/1908/ico_gnb_all_off_x2.png" alt=""> 
-                <!-- toggle icon -->
-                <span class="text">전체 카테고리</span>
-              </a>
+            <li class="menu category_toggle">
+                <div class="toggle">
+                  <img width="16px" height="14px" src="https://res.kurly.com/pc/service/common/1908/ico_gnb_all_off_x2.png" alt="">
+                  <span>전체 카테고리</span>
+                </div>
+              <div class="category_wrap">
+                <ul id="inner_nav">
+                  <li><a onclick="location.href='/product/meat'" class="meat"><span>고기</span></a></li>
+                  <li><a onclick="location.href='/product/vegetable'" class="vegetable"><span>야채</span></a></li>
+                  <li><a onclick="location.href='/product/fruit'" class="fruit"><span>과일</span></a></li>
+                  <li><a onclick="location.href='/product/fish'" class="fish"><span>생선</span></a></li>
+                </ul>
+              </div>
             </li>
             <li class="menu menu2">
-              <a href="#">고기</a>
+              <a href="/product/meat" class="meat">고기</a>
             </li>
             <li class="menu menu3">
-              <a href="#">채소</a>
+              <a href="/product/vegetable" class="vegetable">채소</a>
             </li>
             <li class="menu menu4">
-              <a href="#">과일</a>
+              <a href="/product/fruit" class="fruit">과일</a>
             </li>
             <li class="menu menu5">
-              <a href="#">생선</a>
+              <a href="/product/fish" class="fish">생선</a>
             </li>
           </ul>
         </div>
-          
-        <!-- <div class="menu_toggle">
-          토글메뉴
-        </div> -->
-
-        <div class="search">
-          <input type="text" placeholder="검색어를 입력해주세요" class="search_box">
-          <div id="search_btn">
-            <img src="https://res.kurly.com/pc/service/common/1908/ico_search_x2.png" alt="">
-            <!-- search icon -->
-          </div>
-        </div>
-
       </div>
-      
- 
     </div>
 
 
