--- a/src/views/product-edit/product-edit.html
+++ b/src/views/product-edit/product-edit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-9조</title>
+    <title>FOODDOCK</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
@@ -29,27 +29,90 @@
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.410.0.min.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="product-edit.css" />
+    <script src="/home/home.js" type = "module" defer></script>
+    <script src="/home/home-nav.js" type = "module" defer></script>
+    <!-- 로고 -->
+    <style>
+      .logo {
+        width:70px; 
+        height:70px; 
+        border-radius: 25%; 
+        background-image: url('/logo.png'); 
+        background-size: cover; 
+        box-shadow: 0px 0px 5px #333;
+        transition: all 0.3s ease-in-out;
+        top: 25px;
+        vertical-align: top;
+        justify-content: center;
+      }
+      .logo:hover {
+        transform: scale(1.1);
+      }
+    </style>
   </head>
   <body>
-    <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-9조</span>
-          </a>
+     <!-- 헤더 시작 -->
+     <div id="header">
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="container mt-3">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="/">
+              <div class="logo">
+              </div>
+            </a>
+            <a
+              role="button"
+              class="navbar-burger"
+              aria-label="menu"
+              aria-expanded="false"
+              data-target="navbarBasicExample"
+            >
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+            <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
+              <ul id="navbar">
+              </ul>
+            </div>
+          </div>
         </div>
-    </nav>
-
-
-
-
-
-
-
-
-
+      </nav>
+      <div id="navbar_menu" class="sticky">
+        <div class="menu_main">
+          
+          <ul class="menu_list">
+            <li class="menu category_toggle">
+                <div class="toggle">
+                  <img width="16px" height="14px" src="https://res.kurly.com/pc/service/common/1908/ico_gnb_all_off_x2.png" alt="">
+                  <span>전체 카테고리</span>
+                </div>
+              <div class="category_wrap">
+                <ul id="inner_nav">
+                  <li><a onclick="location.href='/product/meat'" class="meat"><span>고기</span></a></li>
+                  <li><a onclick="location.href='/product/vegetable'" class="vegetable"><span>야채</span></a></li>
+                  <li><a onclick="location.href='/product/fruit'" class="fruit"><span>과일</span></a></li>
+                  <li><a onclick="location.href='/product/fish'" class="fish"><span>생선</span></a></li>
+                </ul>
+              </div>
+            </li>
+            <li class="menu menu2">
+              <a href="/product/meat" class="meat">고기</a>
+            </li>
+            <li class="menu menu3">
+              <a href="/product/vegetable" class="vegetable">채소</a>
+            </li>
+            <li class="menu menu4">
+              <a href="/product/fruit" class="fruit">과일</a>
+            </li>
+            <li class="menu menu5">
+              <a href="/product/fish" class="fish">생선</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <!-- product-edit -->
     <section class="container">
