fix : api 데이터 오류

--- a/src/views/user-info-cart/user-info-cart.html
+++ b/src/views/user-info-cart/user-info-cart.html
@@ -87,12 +87,12 @@
         </div>
         <!-- 여기서부터는 db에 있는 데이터들을 다시 뿌려주는 역할을 한다. -->
         <div class="db_cart_list_container">
-          <div class="db_cart_list_items1">2022/05/31</div>
+          <!-- <div class="db_cart_list_items1">2022/05/31</div>
           <div class="db_cart_list_items2">아이보리 니트 1개</div>
           <div class="db_cart_list_items3">상품 준비중</div>
           <div class="db_cart_list_items4">
             <button type="button" class="user_cart_cancel">주문 취소</button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
